# livedisplaced_

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/build_app/: action.yml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2c4f017e061d_initial_schema.py
front/: activate_account_email.html  base.bundle.js  base.bundle.js.map  base.css  base.css.map  base.html  compliance_form.html  dashboard.bundle.js  dashboard.bundle.js.map  dashboard.css  dashboard.css.map  dashboard.html  edit_password.html  home.bundle.js  home.bundle.js.map  home.css  home.css.map  home.html  individual_reports.bundle.js  individual_reports.bundle.js.map  individual_reports.css  individual_reports.css.map  individual_reports.html  login.css  login.css.map  login.html  password_lost_request.css  password_lost_request.css.map  password_lost_request.html  privacy_policy.html  register.css  register.css.map  register.html  reset_password.html  settings.css  settings.css.map  settings.html  terms.css  terms.css.map  terms_of_use.html  (+3 more)
src/: app.py  cli.py  managers.py  settings.py
src/Context/Domain/: Oauth.py  Passcode.py  TermsOfUse.py  User.py  __init__.py
src/Context/Service/: Oauth.py  Passcode.py  Population.py  TermsOfUse.py  User.py  __init__.py
src/Controllers/: __init__.py
src/Controllers/API/: __init__.py  bilateral_ts_data_api.py  country_ts_data_api.py  global_data_api.py  utils.py
src/Controllers/Exceptions/: Users.py  __init__.py
src/Controllers/Sessions/: login_user.py
src/Controllers/Web/: __init__.py  countries_report_app.py  flux_between_cntries_app.py  forget_password_app.py  overview_app.py  reset_password_app.py  terms_of_use_app.py
src/Crons/: __init__.py  sync_job.py
src/Crons/loaders/: geo_loader.py  (+1 more)
src/Infrastructure/: __init__.py
src/Middlewares/: global_middleware.py  user_middleware.py
tests/integration/: conftest.py  docker-compose.test.yml
(+90 files in other folders)
